--- a/css/style.css
+++ b/css/style.css
@@ -101,33 +101,53 @@ img {
   margin-bottom: 40px;
 }
 
+.search-form {
+  position: relative;
+  width: 270px;
+}
+
 .header-main .search-input {
   border: none;
   color: #ffffff;
   background-color: #293449;
+  width: 100%;
+  height: 42px;
+  padding: 0;
+  padding-left: 50px;
 }
 
 .search-input::placeholder {
   color: #ffffff;
 }
 
-.search-form {
-  position: relative;
-  width: 270px;
-  padding-left: 50px;
+.header-main .search-icon {
+  position: absolute;
+  top: 12px;
+  left: 17px;
+  opacity: 0.3;
+  pointer-events: none;
 }
 
-.search-form::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 17px;
-  width: 17px;
-  height: 17px;
-  background-image: url(../img/icon-search.svg);
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  opacity: 0.3;
+.search-input:hover {
+  background-color: #212a3a;
+}
+
+.search-input:hover+.search-icon,
+.search-input:focus+.search-icon {
+  opacity: 1;
+}
+
+.search-input:focus {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.search-input:focus::placeholder {
+  color: #000000;
+}
+
+.search-input:focus+.search-icon path {
+  fill: #ee3643;
 }
 
 .header-order {
@@ -188,18 +208,14 @@ img {
 .header-bookmarks:focus,
 .header-bookmarks:hover,
 .header-cart:focus,
-.header-cart:hover,
-.header-main .search-input:focus,
-.header-main .search-input:hover {
+.header-cart:hover {
   background-color: #212a3a;
 }
 
 .header-bookmarks:focus::before,
 .header-bookmarks:hover::before,
 .header-cart:focus::before,
-.header-cart:hover::before,
-.search-form:focus::before,
-.search-form:hover::before {
+.header-cart:hover::before {
   opacity: 1;
 }
 
@@ -299,13 +315,7 @@ img {
   position: absolute;
   top: 12px;
   left: 15px;
-  /*opacity: 0.3;*/
 }
-
-/*.login-button:focus .login-button-icon,
-.login-button:hover .login-button-icon {
-  opacity: 1;
-}*/
 
 .login-button:focus path,
 .login-button:hover path {
@@ -336,18 +346,6 @@ img {
   fill: #c5c5c5;
 }
 
-/*.name-button::before {
-  content: '';
-  position: absolute;
-  top: 11px;
-  left: 15px;
-  width: 20px;
-  height: 18px;
-  background-image: url(../img/icon-user.svg);
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}*/
-
 .logout-button {
   padding-left: 12px;
   padding-right: 10px;
@@ -362,27 +360,9 @@ img {
   fill: #c5c5c5;
 }
 
-/*.logout-button::before {
-  content: '';
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  width: 20px;
-  height: 17px;
-  background-image: url(../img/icon-logout.svg);
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}*/
-
 .user-navigation {
   margin-left: auto;
 }
-
-/*
-.user-navigation.unauthorized {
-  width: 230px;
-}
-*/
 
 .user-navigation.authorized {
   width: 300px;
@@ -761,6 +741,9 @@ input[type="radio"]:checked+label::before {
 }
 
 .catalog-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
   width: 220px;
   margin: 0 20px 20px 0;
@@ -788,12 +771,14 @@ input[type="radio"]:checked+label::before {
   padding: 30px 50px 30px 40px;
 }
 
-.catalog-content-container {
+.catalog-item h3,
+.catalog-item .old-price,
+.catalog-item .new-price {
   font-family: 'PT Sans', Arial, sans-serif;
   font-weight: bold;
 }
 
-.catalog-content-container h3 {
+.catalog-item h3 {
   max-width: 157px;
   margin: 0 auto;
   margin-bottom: 11px;
@@ -802,10 +787,8 @@ input[type="radio"]:checked+label::before {
   text-align: center;
 }
 
-.catalog-item-price {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.catalog-item .old-price,
+.catalog-item .new-price {
   font-size: 17px;
   line-height: 18px;
 }
@@ -816,13 +799,10 @@ input[type="radio"]:checked+label::before {
   text-decoration: line-through;
 }
 
-/*.old-price.empty {
-  visibility: hidden;
-}*/
-
 .new-price {
   width: 141px;
   padding: 10px;
+  margin-top: auto;
   margin-left: 5px;
   margin-bottom: 20px;
   color: #ffffff;
@@ -1073,6 +1053,7 @@ input[type="radio"]:checked+label::before {
 .modal {
   display: none;
   position: fixed;
+  top: 165px;
   background-color: #ffffff;
   box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.3);
 }
@@ -1093,7 +1074,6 @@ input[type="radio"]:checked+label::before {
 }
 
 .modal-map {
-  top: 165px;
   left: 50%;
   margin-left: -470px;
 }
@@ -1103,8 +1083,6 @@ input[type="radio"]:checked+label::before {
 }
 
 .modal-feedback {
-  display: block;
-  top: 165px;
   left: 50%;
   margin-left: -310px;
   width: 620px;
@@ -1112,12 +1090,12 @@ input[type="radio"]:checked+label::before {
 }
 
 .modal-container {
-  padding: 48px 80px 37px 80px;
+  padding: 45px 80px 37px 80px;
 }
 
 .modal-field {
   display: inline-block;
-  margin-bottom: 22px;
+  margin-bottom: 19px;
 }
 
 .name-field {
@@ -1129,7 +1107,8 @@ input[type="radio"]:checked+label::before {
   display: block;
   border: 2px solid #dee3e4;
   border-radius: 2px;
-  padding: 10px 15px;
+  margin-top: 7px;
+  padding: 7px 13px;
   font-family: 'PT Sans', Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -1138,12 +1117,13 @@ input[type="radio"]:checked+label::before {
 
 .modal-field input {
   width: 220px;
-  margin-top: 13px;
 }
 
 .modal-field textarea {
   width: 460px;
   margin-top: 18px;
+  margin-bottom: 0;
+  padding-bottom: 15px;
 }
 
 .modal-field input:focus,
@@ -1168,7 +1148,7 @@ input[type="radio"]:checked+label::before {
   width: 100%;
   border: none;
   border-radius: 2px;
-  padding: 14px;
+  padding: 10px;
   background-color: #ee3643;
   color: #ffffff;
   font-size: 14px;
@@ -1187,17 +1167,24 @@ input[type="radio"]:checked+label::before {
 }
 
 .modal-cart {
-  display: block;
-  top: 410px;
   left: 50%;
   margin-left: -310px;
   width: 620px;
+  border-top: 7px solid #ee3643;
+}
+
+.modal-cart .modal-container {
+  padding-bottom: 45px;
+}
+
+.modal-cart .modal-button-container {
+  padding: 40px 80px 37px 80px;
 }
 
 .modal-cart h2 {
   position: relative;
   margin: 0;
-  padding: 20px 0 20px 95px;
+  padding: 20px 0 20px 99px;
   font-size: 30px;
   line-height: 30px;
   font-weight: 400;
@@ -1206,8 +1193,8 @@ input[type="radio"]:checked+label::before {
 .modal-cart h2::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1px;
+  left: 1px;
   width: 66px;
   height: 66px;
   background-image: url(../img/icon-order.png);
@@ -1220,7 +1207,7 @@ input[type="radio"]:checked+label::before {
   width: 220px;
   border: none;
   border-radius: 2px;
-  padding: 14px;
+  padding: 10px;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
