--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,17 @@ img {
 .container {
   width: 940px;
   margin: 0 auto;
+}
 
+.button {
+  padding: 10px;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  border-radius: 2px;
+  background-color: #ee3643;
+  color: #ffffff;
+  text-align: center;
 }
 
 /* Шапка */
@@ -466,6 +476,264 @@ img {
 }
 
 /* Контент главной страницы */
+
+.main-content {
+  margin-bottom: 85px;
+}
+
+.main-promo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 33px;
+}
+
+.promo-block {
+  width: 300px;
+  margin-bottom: 21px;
+  padding: 21px;  
+  background-repeat: no-repeat;
+  background-position: 200px 30px;
+}
+
+.promo-new {
+  position: relative;
+}
+
+.promo-new::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 59px;
+  width: 60px;
+  background-image: url(../img/new-flag.png);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+
+.promo-block h3 {
+  margin: 0;
+  margin-bottom: 13px;
+  padding: 0;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.promo-block a {
+  display: block;
+  width: 135px;
+  margin-left: 3px;
+  padding: 10px;
+  border-radius: 2px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.promo-materials {
+  background-color: #ffbf47;
+  background-image: url(../img/icon-1.svg);
+  background-position: 213px 32px;
+}
+
+.promo-tools {
+  background-color: #3bbce3;
+  background-image: url(../img/icon-2.svg);
+  background-position: 198px 32px;
+}
+
+.promo-tech {
+  background-color: #dc91d8;
+  background-image: url(../img/icon-3.svg);
+  background-position: 190px 32px;
+}
+
+.promo-sale {
+  background-color: #8ed78f;
+  background-image: url(../img/icon-4.svg);
+  background-position: 195px 27px;
+}
+
+.promo-shipping {
+  background-color: #ffbf47;
+  background-image: url(../img/icon-5.svg);
+  background-position: 191px 32px;
+}
+
+.promo-slider {
+  width: 620px;
+  height: 266px;
+  padding: 25px;
+  background-image: url(../img/slider-1.png);
+  background-repeat: no-repeat;
+  background-color: #8c7b6d;
+  color: #ffffff;
+}
+
+.promo-slider h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.promo-slider p {
+  margin: 0;
+  padding: 0;
+}
+
+.slider-button {
+  display: block;
+  width: 195px;
+  margin-top: 121px;
+}
+
+.main-heading {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 25px;
+  background-color: #f9f5f0;
+}
+
+.main-heading h2 {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #32425c;
+}
+
+.main-heading .button {
+  display: inline-block;
+  width: 253px;
+  margin-left: auto;
+}
+
+.main-products-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 23px;
+  padding: 0;
+}
+
+.main-products-list .catalog-item {
+  margin: 0;
+}
+
+.main-brands {
+  margin-bottom: 65px;
+}
+
+.main-brands-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  padding-top: 1px;
+}
+
+.main-brands-list li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 220px;
+  height: 145px;
+  border: 1px solid #eaeaea;
+  margin-bottom: 20px;
+  list-style-type: none;
+}
+
+.main-services {
+  padding-top: 65px;
+  margin-bottom: 80px;
+  background-color: #f4f7f9;
+}
+
+.services-box {
+  width: 400px;
+  margin-bottom: 70px;
+}
+
+.services-slider {
+  padding-bottom: 100px;
+}
+
+.services-description {
+  display: inline-block;
+  width: 275px;
+  margin-left: 75px;
+  vertical-align: top;
+}
+
+.services-list {
+  display: inline-block;
+  width: 240px;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+}
+
+.services-item {
+  width: 100%;
+  padding-top: 15px;
+  padding-left: 21px;
+  padding-bottom: 16px;  
+  font-size: 21px;
+  line-height: 30px;
+  font-weight: 700;
+  list-style-type: none;
+  background-color: #32425c;
+  color: #ffffff;
+}
+
+.services-item.active {
+  color: #32425c;
+  background-color: #ffffff;
+}
+
+.main-services h2 {
+  margin: 0;
+  margin-bottom: 26px;
+  padding: 0;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.main-services h3 {
+  margin: 0;
+  margin-bottom: 23px;
+  padding: 0;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #32425c;
+}
+
+.main-services p {
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', Arial, sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+}
 
 .index-columns {
   display: flex;
