--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ img {
   display: block;
   margin-bottom: 5px;
   padding-top: 8px;
-  padding-right: 50px;
+  padding-right: 49px;
   padding-bottom: 9px;
   padding-left: 72px;
 
@@ -602,7 +602,7 @@ img {
 /* Контент главной страницы */
 
 .main-content {
-  margin-bottom: 87px;
+  margin-bottom: 85px;
 }
 
 .main-promo {
@@ -780,6 +780,7 @@ img {
           box-sizing: content-box;
 
   display: inline-block;
+  vertical-align: top;
   width: 6px;
   height: 6px;
   margin-right: 10px;
@@ -921,13 +922,10 @@ img {
 }
 
 .main-services {
-  margin-bottom: 77px;
+  margin-bottom: 80px;
   padding-top: 65px;
 
   background-color: #f4f7f9;
-  background-image: url(../img/services-shipping.png);
-  background-position: 760px 260px;
-  background-repeat: no-repeat;
 }
 
 .services-box {
@@ -935,15 +933,27 @@ img {
   margin-bottom: 70px;
 }
 
-.services-slider {
-  padding-bottom: 102px;
-}
-
 .services-description {
   display: inline-block;
   vertical-align: top;
-  width: 275px;
+  width: 619px;
   margin-left: 75px;
+}
+
+.services-description-text {
+  width: 275px;
+}
+
+.services-description-item {
+  padding-bottom: 128px;
+
+  background-position-x: 100%;
+  background-position-y: 22px;
+  background-repeat: no-repeat;
+}
+
+.services-shipping {
+  background-image: url(../img/services-shipping.png);
 }
 
 .services-warranty,
@@ -994,7 +1004,7 @@ img {
 }
 
 .services-item:last-child a {
-  border-bottom: none;
+  border-bottom-color: #32425c;
 }
 
 .services-item:focus a,
@@ -1007,7 +1017,7 @@ img {
   color: #32425c;
 
   background-color: #ffffff;
-  border-bottom: none;
+  border-bottom-color: #ffffff;
 }
 
 .main-services h2 {
@@ -1083,7 +1093,7 @@ img {
 }
 
 .main-contacts p {
-  margin-bottom: 30px;
+  margin-bottom: 55px;
 }
 
 .companies-list {
@@ -1278,7 +1288,7 @@ img {
   margin-bottom: 0;
 }
 
-input[type="checkbox"] + label::before {
+.filter-checkbox + label::before {
   content: "";
 
   position: absolute;
@@ -1293,12 +1303,12 @@ input[type="checkbox"] + label::before {
   background-repeat: no-repeat;
 }
 
-input[type="checkbox"]:focus + label::before,
-input[type="checkbox"]:hover + label::before {
+.filter-checkbox:focus + label::before,
+.filter-checkbox:hover + label::before {
   background-image: url(../img/checkbox-off-hover.svg);  
 }
 
-input[type="checkbox"]:checked + label::before {
+.filter-checkbox:checked + label::before {
   content: "";
 
   position: absolute;
@@ -1313,12 +1323,12 @@ input[type="checkbox"]:checked + label::before {
   background-repeat: no-repeat;
 }
 
-input[type="checkbox"]:checked:focus + label::before,
-input[type="checkbox"]:checked:hover + label::before {
+.filter-checkbox:checked:focus + label::before,
+.filter-checkbox:checked:hover + label::before {
   background-image: url(../img/checkbox-on-hover.svg);  
 }
 
-input[type="radio"] + label::before {
+.filter-radio + label::before {
   content: "";
 
   position: absolute;
@@ -1333,12 +1343,12 @@ input[type="radio"] + label::before {
   background-repeat: no-repeat;
 }
 
-input[type="radio"]:focus + label::before,
-input[type="radio"]:hover + label::before {
+.filter-radio:focus + label::before,
+.filter-radio:hover + label::before {
   background-image: url(../img/radio-off-hover.svg);
 }
 
-input[type="radio"]:checked + label::before {
+.filter-radio:checked + label::before {
   content: "";
 
   position: absolute;
@@ -1353,8 +1363,8 @@ input[type="radio"]:checked + label::before {
   background-repeat: no-repeat;
 }
 
-input[type="radio"]:checked:focus + label::before,
-input[type="radio"]:checked:hover + label::before {
+.filter-radio:checked:focus + label::before,
+.filter-radio:checked:hover + label::before {
   background-image: url(../img/radio-on-hover.svg);
 }
 
@@ -1368,7 +1378,7 @@ input[type="radio"]:checked:hover + label::before {
 }
 
 .filter-button {
-  margin-top: 75px;
+  margin-top: 76px;
   padding: 10px 37px;
 
   font-size: 13px;
@@ -1472,7 +1482,7 @@ input[type="radio"]:checked:hover + label::before {
   vertical-align: top;
   width: 95px;
   padding-top: 8px;
-  padding-bottom: 9px;
+  padding-bottom: 11px;
 
   text-align: center;
 
@@ -1484,7 +1494,7 @@ input[type="radio"]:checked:hover + label::before {
 /* Сортировка */
 
 .sort {
-  margin-bottom: 20px;
+  margin-bottom: 23px;
   padding-top: 10px;
   padding-right: 0;
   padding-bottom: 10px;
@@ -1615,7 +1625,7 @@ input[type="radio"]:checked:hover + label::before {
           align-items: center;
   width: 220px;
   margin-right: 20px;
-  margin-bottom: 21px;
+  margin-bottom: 20px;
 
   outline: 2px solid #e5e5e5;
   list-style-type: none;
@@ -1699,7 +1709,6 @@ input[type="radio"]:checked:hover + label::before {
   display: none;
 }
 
-.catalog-item-active .catalog-item-buttons,
 .catalog-item:focus .catalog-item-buttons,
 .catalog-item:hover .catalog-item-buttons {
   position: absolute;
@@ -1712,11 +1721,14 @@ input[type="radio"]:checked:hover + label::before {
 }
 
 .catalog-item-button {
+  display: inline-block;
+  vertical-align: top;
   width: 135px;
   padding: 9px;
 
   font-size: 14px;
   line-height: 18px;
+  text-align: center;
   text-transform: uppercase;
 
   border: none;
@@ -1791,7 +1803,7 @@ input[type="radio"]:checked:hover + label::before {
 .catalog-description {
   width: 100%;
   padding-top: 65px; 
-  padding-bottom: 69px;
+  padding-bottom: 70px;
 
   background-color: #f4f7f9;
 }
@@ -1911,6 +1923,13 @@ input[type="radio"]:checked:hover + label::before {
   margin-left: 4px;
 }
 
+.footer-phone {
+  display: block;
+
+  color: #ffffff;
+  text-decoration: none;
+}
+
 .footer-menu-main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2000,6 +2019,10 @@ input[type="radio"]:checked:hover + label::before {
 .footer-feedback,
 .footer-developer {
   margin: 0;
+}
+
+.footer-developer {
+  margin-left: 55px;
 }
 
 .footer-feedback a,
@@ -2112,7 +2135,7 @@ input[type="radio"]:checked:hover + label::before {
   margin-left: -470px;
 }
 
-.modal-map-img {
+.modal-map iframe {
   display: block;
 }
 
@@ -2128,7 +2151,7 @@ input[type="radio"]:checked:hover + label::before {
 .modal-container {
   padding-top: 45px;
   padding-right: 80px;
-  padding-bottom: 37px;
+  padding-bottom: 20px;
   padding-left: 80px;
 }
 
@@ -2163,7 +2186,6 @@ input[type="radio"]:checked:hover + label::before {
 
 .modal-field textarea {
   width: 460px;
-  margin-top: 18px;
   margin-bottom: 0;
   padding-bottom: 15px;
 }
@@ -2182,7 +2204,10 @@ input[type="radio"]:checked:hover + label::before {
 
 .modal-button-container {
   width: 100%;
-  padding: 37px 80px;
+  padding-top: 33px;
+  padding-right: 80px;
+  padding-bottom: 38px;
+  padding-left: 80px;
 
   background-color: #f4f4f4;
 }
@@ -2209,6 +2234,8 @@ input[type="radio"]:checked:hover + label::before {
   padding-right: 80px;
   padding-bottom: 37px;
   padding-left: 80px;
+
+  font-size: 0;
 }
 
 .modal-cart h2 {
@@ -2243,31 +2270,27 @@ input[type="radio"]:checked:hover + label::before {
 .button-order,
 .button-dismiss {
   width: 220px;
-  padding: 10px;
 
   font-size: 14px;
-  line-height: 18px;
-  text-transform: uppercase;
-
-  border: none;
-  border-radius: 2px;
-
-  cursor: pointer;
-}
-
-.button-order {
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 15px;
-
-  text-align: center;
-  color: #ffffff;
-
-  background-color: #ee3643;
 }
 
 .button-dismiss {
+  margin-left: 20px;
+
   color: #000000;
 
+  background-color: #ffffff;
+}
+
+.button-dismiss:focus,
+.button-dismiss:hover {
+  color: #ee3643;
+
+  background-color: #ffffff;
+}
+
+.button-dismiss:active {
+  color: rgba(0, 0, 0, 0.3);
+  
   background-color: #ffffff;
 }
