--- a/css/style.css
+++ b/css/style.css
@@ -265,16 +265,20 @@ img {
   opacity: 0.3;
 }
 
-.header-cart.active {
+.header-cart.active,
+.header-bookmarks.active {
   background-color: #ee3643;
 }
 
 .header-cart.active:focus,
-.header-cart.active:hover {
+.header-cart.active:hover,
+.header-bookmarks.active:focus,
+.header-bookmarks.active:hover {
   background-color: #ca2c37;
 }
 
-.header-cart.active:active {
+.header-cart.active:active,
+.header-bookmarks.active:active {
   color: rgba(255, 255, 255, 0.6);
 
   background-color: #ba2732;
@@ -991,7 +995,7 @@ img {
   display: block;
   width: 100%;
   padding-top: 15px;
-  padding-bottom: 16px;  
+  padding-bottom: 15px;  
   padding-left: 21px;
 
   font-weight: 700;
@@ -1004,7 +1008,7 @@ img {
 }
 
 .services-item:last-child a {
-  border-bottom-color: #32425c;
+  border-bottom: none;
 }
 
 .services-item:focus a,
@@ -1625,7 +1629,7 @@ img {
           align-items: center;
   width: 220px;
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 21px;
 
   outline: 2px solid #e5e5e5;
   list-style-type: none;
@@ -1657,7 +1661,7 @@ img {
 }
 
 .catalog-image-container {
-  padding: 30px 50px 30px 40px;
+  margin-bottom: 2px;
 }
 
 .catalog-item h3,
@@ -1712,6 +1716,8 @@ img {
 .catalog-item:focus .catalog-item-buttons,
 .catalog-item:hover .catalog-item-buttons {
   position: absolute;
+  top: 0;
+  left: 0;
 
   display: block;
   width: 220px;
@@ -2109,6 +2115,10 @@ img {
   background-color: #ffffff;
   -webkit-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.3);
           box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.3);
+}
+
+.modal-show {
+  display: block;
 }
 
 .modal-close {
